# LearningRust

./: Readme.md
apiTest/: Cargo.toml
apiTest/src/: main.rs
apiTest/templates/: index.html.tera
first/: kraken  kraken.rs
kraken_project/: Cargo.toml  Readme.md
kraken_project/src/: main.rs
life/: Cargo.toml
life/src/: main.rs
struct_exercise/: Cargo.toml
struct_exercise/src/: main.rs
web_one/: Cargo.toml
web_one/src/: main.rs
