# cargo-features = ["rename-dependency"]
[package]
name = "apiTest"
version = "0.1.0"
authors = ["Héctor Iván Patricio Moreno <hectorivanpatriciomoreno@gmail.com>"]


[dependencies]
rand = "0.6.5"
rocket = "0.4"
rocket_codegen = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["tera_templates", "json"]
